add a python interpreter and collective.checkdocs to the buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,19 @@
 [buildout]
 versions = versions
-parts = test
+parts = test py
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = repoze.xmliter
 defaults = ['--auto-color']
+
+[py]
+recipe = zc.recipe.egg
+eggs =
+    repoze.xmliter
+    collective.checkdocs
+interpreter = py
 
 [versions]
 lxml = 2.2.8
