--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = 
-#    py37,py38,py39,py310,py311,pypy3,cover,docs
-    py37,py38,py39,py310,py311,pypy3,cover
+envlist =
+    py37,py38,py39,py310,py311,py312,py313,py314,pypy3,cover
 
 [testenv]
-commands = 
+commands =
     python -m pytest --cov=repoze.xmliter --cov-append --cov-report= {toxinidir}/repoze/xmliter/tests.py
 usedevelop=true
 deps =
@@ -17,7 +16,7 @@ setenv =
 skip_install = true
 basepython =
     python3.10
-commands = 
+commands =
     coverage combine
     coverage report --fail-under=100 --show-missing
     coverage xml
@@ -29,7 +28,7 @@ setenv =
 [testenv:docs]
 basepython =
     python3.10
-commands = 
+commands =
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
     sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
 deps =
