--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
 
 [testenv]
 commands =
-    python -m pytest --cov=repoze.xmliter --cov-append --cov-report= {toxinidir}/repoze/xmliter/tests.py
+    python -m pytest --cov=repoze.xmliter --cov-append --cov-report= {toxinidir}/src/repoze/xmliter/tests.py
 usedevelop=true
 deps =
     pytest
