Fix coverage source.
The various jobs would give a warning:

CoverageWarning: Module repoze.xmliter was previously imported, but not measured (module-not-measured); see https://coverage.readthedocs.io/en/7.11.0/messages.html#warning-module-not-measured

The result was a coverage of 41 percent:

```
cover: commands[1]> coverage report --fail-under=100 --show-missing
Name                               Stmts   Miss  Cover   Missing
----------------------------------------------------------------
src/repoze/xmliter/__init__.py         1      1     0%   1
src/repoze/xmliter/decorator.py        9      0   100%
src/repoze/xmliter/serializer.py      34      0   100%
src/repoze/xmliter/tests.py           84     84     0%   2-184
src/repoze/xmliter/utils.py           15      0   100%
----------------------------------------------------------------
TOTAL                                143     85    41%
Coverage failure: total of 41 is less than fail-under=100
```

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
 
 [testenv]
 commands =
-    python -m pytest --cov=repoze.xmliter --cov-append --cov-report= {toxinidir}/src/repoze/xmliter/tests.py
+    python -m pytest --cov=src/ --cov-append --cov-report= {toxinidir}/src/repoze/xmliter/tests.py
 usedevelop=true
 deps =
     pytest
